# ha-opus-smarthome

./: README.md  hacs.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
custom_components/opus_smarthome/: __init__.py  climate.py  config_flow.py  const.py  coordinator.py  cover.py  device_trigger.py  entity.py  event.py  manifest.json  number.py  sensor.py  strings.json
tests/: conftest.py  test_config_flow.py  test_coordinator.py  test_event.py
