[project]
name = "ha-opus-smarthome"
version = "0.1.0"
description = "OPUS SmartHome Home Assistant custom integration"
license = {text = "MIT"}
authors = [
    { name = "Philipp Piwo", email = "github@thepiwo.com" }
]
requires-python = ">=3.12"

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-asyncio>=1.3",
    "voluptuous>=0.16",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
