[project]
name = "ha-opus-smarthome"
version = "0.1.5"
description = "OPUS SmartHome Home Assistant custom integration"
license = {text = "MIT"}
authors = [
    { name = "Philipp Piwo", email = "github@thepiwo.com" }
]
requires-python = ">=3.13.2"

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-asyncio>=1.3",
    "voluptuous>=0.16",
    "homeassistant",
    "pyopus-smarthome==0.1.3",
    "pytest-homeassistant-custom-component",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
